force-app/main/default/objects/Trustee_Fees__c/Trustee_Fees__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Trustee Fees</description>
    <label>Trustee Fees</label>
</CustomObject>