force-app/main/default/objects/Trustee_Fees__c/fields/Counselling_Fee__c.field-meta.xml
<CustomField>
    <fullName>Counselling_Fee__c</fullName>
    <defaultValue>170</defaultValue>
    <description>Counselling Fee</description>
    <inlineHelpText>Counselling Fee</inlineHelpText>
    <label>Counselling Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>