force-app/main/default/objects/Trustee_Fees__c/fields/HST_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>HST_Tax_Rate__c</fullName>
    <defaultValue>13</defaultValue>
    <description>HST Tax Rate</description>
    <inlineHelpText>HST Tax Rate</inlineHelpText>
    <label>HST Tax Rate</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>