force-app/main/default/objects/Trustee_Fees__c/fields/Receiver_Fee__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Fee__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Receiver Fee</description>
    <inlineHelpText>Receiver Fee</inlineHelpText>
    <label>Receiver Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>