force-app/main/default/objects/Trustee_Fees__c/fields/Superintendant_Variable_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Superintendant_Variable_Fee_Rate__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Superintendant Variable Fee Rate</description>
    <inlineHelpText>Superintendant Variable Fee Rate</inlineHelpText>
    <label>Superintendant Variable Fee Rate</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>