force-app/main/default/objects/Trustee_Fees__c/fields/Trustee_Administration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Administration_Fee__c</fullName>
    <defaultValue>1500</defaultValue>
    <description>Trustee Administration Fee</description>
    <inlineHelpText>Trustee Administration Fee</inlineHelpText>
    <label>Trustee Administration Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>