force-app/main/default/objects/Trustee_Fees__c/fields/Trustee_Variable_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Variable_Fee_Rate__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Trustee Variable Fee Rate</description>
    <inlineHelpText>Trustee Variable Fee Rate</inlineHelpText>
    <label>Trustee Variable Fee Rate</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>